--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,3 +1,5 @@
 
 Please read core/INSTALL.txt for detailed installation instructions for your
 Drupal website.
+
+Hey Malika Singal this side. I am a web developer and I want to contribute in this project
